examples/quickstart/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quickstart
  namespace: quickstart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quickstart
  template:
    metadata:
      labels:
        app: quickstart
    spec:
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:latest
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
