examples/quickstart/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quickstart
  namespace: quickstart
spec:
  type: ClusterIP
  selector:
    app: quickstart
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
