examples/quickstart/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: quickstart
  namespace: quickstart
spec:
  parentRefs:
    - name: quickstart
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: quickstart
          port: 80
